Fix diary spacing

--- a/content/css/_diary.scss
+++ b/content/css/_diary.scss
@@ -26,12 +26,12 @@ article.djarju {
     grid-area: grid-bottom-full;
   }
 
-  #grid-max-panel-left-top,
-  #grid-max-panel-right-top,
-  #grid-max-panel-right-bottom,
-  #grid-bottom-full {
-    margin: 0;
-  }
+  // #grid-max-panel-left-top,
+  // #grid-max-panel-right-top,
+  // #grid-max-panel-right-bottom,
+  // #grid-bottom-full {
+  //   margin: 0;
+  // }
 
   .container {
     display: grid;
